# procgen-terrain

./: Cargo.toml  LICENSE  README.md
data/: house.blend  house.blend1  tree.blend  tree.mtl
data/models/: house.mtl  tree.ply
src/: main.rs
src/model/: mod.rs  model.rs
src/model/obj_loader/: face.rs  mod.rs  vertex.rs
src/renderer/: main.rs  mod.rs  renderer.rs  viewport.rs
src/shaders/: frag.glsl  mod.rs  shaders.rs  vert.glsl
src/terrain/: mod.rs  terrain.rs
